<resources>
    <string name="app_name">PhotosLucas</string>
    <string name="name_label">Name: (required)</string>
    <string name="save_label">SAVE</string>
    <string name="cancel_label">CANCEL</string>


    <string-array name="album_array">
        <item> Bahamas</item>
        <item>Rutgers Junior Year</item>
    </string-array>
    <string name="title_activity_edit_display_album">Edit/display Album</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Add">add</string>
    <string name="Remove">remove</string>
    <string name="Display">display</string>
    <string name="add">Add</string>
    <string name="title_activity_add_album">Add Album</string>
    <string name="title_activity_photo__display">Photo</string>
    <string name="search">search</string>
    <string name="title_activity_search_options">Search Options</string>
    <string name="slideshow">slideshow</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="Next">Next</string>
    <string name="Prev">Prev</string>
    <string name="addTag">Add Tag</string>
    <string name="remTag">Rem Tag</string>
    <string name="Move">Move</string>
</resources>