<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">


    <ImageView
        android:id="@+id/picture"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:translationX="150dp"
        android:translationY="50dp" />

    <Button
        android:id="@+id/movePhoto"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/background"
        android:onClick="movePhoto"
        android:text="@string/Move"
        android:textColor="@color/foreground"
        android:textSize="16sp"

        app:backgroundTint="@null" />
    <Button
        android:id="@+id/removePhoto"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/background"
        android:onClick="remove"
        android:text="@string/Remove"
        android:textColor="@color/foreground"
        android:textSize="16sp"
        app:backgroundTint="@null" />


    <ListView
        android:id="@+id/tags"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:translationX="150dp"
        android:translationY="70dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/remTag"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/background"
        android:onClick="remTag"
        android:text="@string/remTag"
        android:textColor="@color/foreground"
        android:textSize="16sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/addTag"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/background"
        android:onClick="addTag"
        android:text="@string/addTag"
        android:textColor="@color/foreground"
        android:textSize="16sp"
        app:backgroundTint="@null" />


</LinearLayout>
